<resources>
    <!--IncomeListActivity-->
    <string name="enter_product_name">название товара</string>
    <string name="income_table">лист доходов</string>
    <string name="expense_table">лист расходов</string>
    <string name="coast">цена</string>
    <string name="button_add">+</string>
    <string name="hint_product_name">Введите название</string>
    <string name="hint_product_price">Введите цену</string>

    <!--MainActivity-->
    <string name="button_income_list">+</string>
    <string name="button_expense_list">-</string>

    <!--Toasts-->
    <string name="toast_enter_product_name">Введите название товара</string>
    <string name="toast_enter_product_price">Введите цену товара</string>
    <string name="toast_product_updated">Запись обновлена</string>
    <string name="toast_product_saved">Запись сохранена</string>
    <string name="toast_product_delete_failed">Удаление записи невозможно</string>
    <string name="toast_product_delete_succsess">Запись удалена</string>

    <!--Buttons-->
    <string name="button_save_product">Сохранить</string>
    <string name="button_delete_product">Удалить</string>
    <string name="button_choose_date">Выбрать дату</string>
    <string name="button_alert_dialog_ok">Выбрать</string>
    <string name="button_alert_dialog_cancel">Отмена</string>

    <!--Titles-->
    <string name="title_add_product">Добавьте товар</string>
    <string name="title_edit_product">Измените товар</string>

    <!--Statistics-->
    <string name="statistics_for_the_mounth">статистика за месяц</string>
    <string name="statistics_for_the_week">статистика за неделю</string>

    <!--Label-->
    <string name="label_purchase_history">История покупок</string>
    <string name="label_statistics">Статистика</string>
    <string name="label_settings">Настройки</string>
    <string name="app_name">Мои покупки</string>
    <string name="label_expense_list">Список расходов</string>
    <string name="label_income_list">Список доходов</string>
    <string name="label_change_product">Редактирование товара</string>

    <!--SettinsActivity-->
    <string name="edit_product_category">Редактировать категории денежных затрат</string>

    <!--menu_history-->
    <string name="menu_history_all">за всё время</string>
    <string name="menu_history_for_day">за день</string>
    <string name="menu_history_for_week">за неделю</string>
    <string name="menu_history_for_month">за месяц</string>
    <string name="menu_history_for_year">за год</string>


    <string name="title_set_date">Выберите дату</string>
    <string name="title_edit_product_dialog">Редактировать запись</string>

</resources>
