<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="@dimen/padding_small"
    tools:context=".activities.IncomeSheetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_small"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:hint="@string/enter_product_name" />

        <EditText
            android:id="@+id/editTextPrice"
            android:inputType="numberDecimal"
            android:layout_width="@dimen/padding"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/coast"/>

        <Button
            android:id="@+id/buttonAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/button_add"
            android:textSize="@dimen/big_text" />
    </LinearLayout>

    <ListView
        android:id="@+id/productListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:divider="@android:color/transparent"
        tools:listitem="@layout/expenses_item"/>
</LinearLayout>