<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_small"
    tools:context=".activities.IncomeListActivity">

    <EditText
        android:id="@+id/editTextProduct"
        android:layout_width="@dimen/no_padding"
        android:layout_height="@dimen/no_padding"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/enter_product_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/guideline_income_list"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editTextPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="@dimen/no_padding"
        android:layout_height="@dimen/no_padding"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/coast"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/editTextProduct"
        app:layout_constraintRight_toLeftOf="@+id/buttonAddProduct"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_income_list"/>

    <Button
        android:id="@+id/buttonAddProduct"
        android:layout_width="@dimen/no_padding"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/button_add"
        android:textSize="@dimen/big_text"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/editTextPrice"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_income_list"/>

    <ListView
        android:id="@+id/productListView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_padding"
        android:layout_marginTop="@dimen/padding_small"
        android:divider="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProduct"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/expenses_item" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_income_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />



</androidx.constraintlayout.widget.ConstraintLayout>